# fake_vehicle_detection

./: CMakeLists.txt  README.md  package.xml
include/fake_vehicle_detection/: eigenmvn.hpp  lidar_vehicle_detection.hpp  mvn.hpp  platoon_distance_estimator.hpp  platoon_multi_distance_estimator.hpp  utils.hpp
src/: lidar_vehicle_detection.cpp  platoon_distance_estimator.cpp  platoon_multi_distance_estimator.cpp
